--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ length of edge or radius: <input id="length" value="10"><br>
 area: <text id="area"></text>
 <script type="text/python">
 from browser import document
+<!--test git hub more testing-->>
 
 def calculate_area(event): 
     ratio = {
